Launch way too much -- Need to fix

--- a/css/main.css
+++ b/css/main.css
@@ -17,10 +17,11 @@ p {
 @keyframes takeoff {
 	0%, 100%{
 		font-size: 150px;
+		margin-top: 500px;
 	}
 	50%{
 		font-size: 200px;
-		margin-top: 20px;
+		margin-top: -2000px;
 		color: black;
 	}
 	/*50%
@@ -40,7 +41,7 @@ p {
 
 center {
 	font-size: 150px;
-	margin-top: 300px;
+	animation: takeoff 2s infinite;
 }
 
 
